<resources>
    <string name="app_name">CourseHub Manager</string>
    <string name="title_home">Home</string>
    <string name="title_my_courses">My Courses</string>
    <string name="title_profile">Profile</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="emailExample">example@gmail.com</string>
    <string name="createAccountInLogin">Don\'t have an account Create one</string>
    <string name="loginAlready">Already have account? Login</string>
    <string name="createYourAccount">Create your Account</string>
    <string name="fullName">Full Name</string>
    <string name="signUp">Sign up</string>
    <string name="courses_categories">Courses Categories</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="new_category_name">New Category Name</string>
    <string name="courseName">Course name</string>
    <string name="Search">Search</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="hello_sameeh">Hello Sameeh</string>
    <string name="myCourses">My Courses</string>
    <string name="saveChanges">Save Changes</string>
    <string name="students">Students</string>
    <string name="hours">Hours</string>
    <string name="mentorName">Mentor Name</string>
    <string name="aboutCourse">About Course</string>
    <string name="courseDescription">Course description</string>
    <string name="showCourseContent">Show Course Content</string>
    <string name="joinCourse">Join Course</string>
    <string name="bookmarksCourses">Bookmark Courses</string>
    <string name="courseContent">Course Content</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="invalid_data">invalid data</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="addCourse">Add Course</string>
    <string name="editCourse">Edit or delete Course</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="addCategory">Add Category</string>
    <string name="editCategory">Edit Category</string>
    <string name="deleteCategory">Delete Category</string>
    <string name="addLesson">Add Lesson</string>
    <string name="editLesson">Edit Lesson</string>
    <string name="deleteLesson">Delete Lesson</string>
    <string name="price">Price</string>
    <string name="lessonLink">Lesson Link</string>
    <string name="lessonName">Lesson Name</string>
    <string name="lessonDuration">Lesson Duration</string>
    <string name="text">Text</string>
    <string name="data_cant_be_empty">Data can\'t be empty</string>
    <string name="select_Course">You must Select course to add lesson</string>
    <string name="select_Category">You must Select category to add Course</string>
    <string name="chooseCategory">Choose Category</string>
    <string name="chooseCourse">Choose Course</string>
    <string name="no_categories_available">No categories available</string>
    <string name="lessonDescription">Lesson Description</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="edited_successfully">Edited Successfully</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="are_you_sure_you_want_to_delete_this_course">Are you sure you want to delete this course</string>
    <string name="warningMessage">Warning message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="operetaion_canceled">Operetaion canceled</string>
    <string name="operetaion_completed">Operetaion completed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="invalid_email_or_password">invalid Email or password</string>
</resources>