<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/shape_rounded_10"
    android:padding="15dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgCourse"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/shape_rounded_10"
        android:scaleType="centerCrop"
        android:src="@drawable/course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="10dp" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:background="@drawable/shape_category"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/category"
        android:textColor="@color/purple_500"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/imgCourse"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:padding="5dp"
        android:src="@drawable/edit_3_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/baseline_delete_forever_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/courseName"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtCategory"
        app:layout_constraintTop_toBottomOf="@+id/txtCategory" />

    <TextView
        android:id="@+id/txtTeacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/teacher_s_name"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/imgCourse"
        app:layout_constraintStart_toStartOf="@id/txtCategory"
        app:layout_constraintTop_toBottomOf="@id/txtCourseName" />

</androidx.constraintlayout.widget.ConstraintLayout>